--- a/index.html
+++ b/index.html
@@ -6,60 +6,101 @@
   <title>Shantanu Patil | Video Editor Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #111;
+      color: #fff;
     }
     header {
-      background-color: #111;
-      color: white;
-      padding: 20px;
+      background: #1f1f1f;
+      padding: 2rem;
       text-align: center;
     }
-    section {
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-      background-color: white;
-      margin-top: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
-    h2 {
-      color: #333;
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1.1rem;
     }
-    a {
-      color: #0066cc;
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      padding: 2rem;
+    }
+    .card {
+      background: #222;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    }
+    .card:hover {
+      transform: scale(1.03);
+    }
+    .thumbnail {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+    .card-body {
+      padding: 1rem;
+    }
+    .card-title {
+      font-size: 1.3rem;
+      margin-bottom: 0.5rem;
+    }
+    .btn {
+      display: inline-block;
+      padding: 0.5rem 1rem;
+      background: #ff4c60;
+      color: white;
+      border-radius: 5px;
       text-decoration: none;
+      font-weight: bold;
     }
-    a:hover {
-      text-decoration: underline;
-    }
-    .info {
-      margin-bottom: 20px;
+    .contact {
+      text-align: center;
+      padding: 1.5rem;
+      background: #1f1f1f;
+      font-size: 0.95rem;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>Shantanu Patil</h1>
-    <p>Video Editor | Storyteller | Creative Professional</p>
-    <p>Email: shantanupatil274114@gmail.com | Phone: 9922394465</p>
+    <p>Video Editor | Premiere Pro Specialist</p>
   </header>
 
-  <section>
-    <h2>1. Prime Video Samples (Highly Recommended)</h2>
-    <p class="info"><strong>Role:</strong> Editor & Cinematographer | <strong>Tools:</strong> Premiere Pro, After Effects</p>
-    <p>A curated collection of my most polished and professional-grade edits. These videos highlight my strongest skills in editing, storytelling, and visual design across different genres.</p>
-    <p><a href="https://drive.google.com/drive/folders/1yQv6dngPLZbgtzRZ6Ze0Q3-exMbS4fDz?usp=sharing" target="_blank">👉 Watch on Google Drive</a></p>
+  <section class="projects">
+    <div class="card">
+      <img class="thumbnail" src="https://i.imgur.com/E7QqU5r.jpg" alt="Event Video Thumbnail">
+      <div class="card-body">
+        <div class="card-title">Event Highlight Trailer</div>
+        <a class="btn" href="https://drive.google.com/file/d/1ACM9obkRZQo_csyyiwJ_gGYOu4rXitbL/view" target="_blank">Watch Video</a>
+      </div>
+    </div>
+    <div class="card">
+      <img class="thumbnail" src="https://i.imgur.com/3HKPkFS.jpg" alt="Campus Life Video">
+      <div class="card-body">
+        <div class="card-title">College Fest Promo</div>
+        <a class="btn" href="https://drive.google.com/file/d/1NoPgQzxyFWhY-8UGPV8z0qivmgYv9jc8/view" target="_blank">Watch Video</a>
+      </div>
+    </div>
+    <div class="card">
+      <img class="thumbnail" src="https://i.imgur.com/9KxB4Ud.jpg" alt="YouTube Video">
+      <div class="card-body">
+        <div class="card-title">YouTube Story Project</div>
+        <a class="btn" href="https://youtu.be/FSlEDcGs4ec" target="_blank">Watch on YouTube</a>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <h2>2. Event Trailer – MESA Technical Fest 2023</h2>
-    <p class="info"><strong>Role:</strong> Lead Editor | <strong>Tools:</strong> Premiere Pro</p>
-    <p>This was my first independently handled project, where I shot and edited an engaging promotional trailer for a large-scale college technical fest.</p>
-    <p><a href="https://youtu.be/FSlEDcGs4ec?si=b-XTCVorGomas5u3" target="_blank">🎥 Watch on YouTube</a></p>
-  </section>
+  <footer class="contact">
+    Contact: shantanupatil274114@gmail.com | +91 99223 94465
+  </footer>
 </body>
 </html>
