--- a/index.html
+++ b/index.html
@@ -1,106 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shantanu Patil | Video Editor Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Video Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
   <style>
     body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f4f4f4;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #111;
-      color: #fff;
+      padding: 0;
     }
     header {
-      background: #1f1f1f;
-      padding: 2rem;
+      background-color: #222;
+      color: white;
+      padding: 20px;
       text-align: center;
     }
-    header h1 {
+    h1 {
       margin: 0;
-      font-size: 2.5rem;
     }
-    header p {
-      margin: 0.5rem 0 0;
-      font-size: 1.1rem;
-    }
-    .projects {
+    .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
-      padding: 2rem;
+      gap: 20px;
+      padding: 20px;
     }
-    .card {
-      background: #222;
+    .video-card {
+      background-color: white;
       border-radius: 10px;
       overflow: hidden;
-      transition: transform 0.3s ease;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
     }
-    .card:hover {
-      transform: scale(1.03);
+    .video-card:hover {
+      transform: scale(1.02);
     }
     .thumbnail {
       width: 100%;
-      height: 180px;
+      height: 200px;
       object-fit: cover;
     }
-    .card-body {
-      padding: 1rem;
-    }
-    .card-title {
-      font-size: 1.3rem;
-      margin-bottom: 0.5rem;
+    .caption {
+      padding: 15px;
+      font-weight: bold;
+      font-size: 1.1em;
     }
     .btn {
-      display: inline-block;
-      padding: 0.5rem 1rem;
-      background: #ff4c60;
-      color: white;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .contact {
+      display: block;
       text-align: center;
-      padding: 1.5rem;
-      background: #1f1f1f;
-      font-size: 0.95rem;
+      margin: 20px;
+      text-decoration: none;
+      color: white;
+      background-color: #007bff;
+      padding: 10px 20px;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Shantanu Patil</h1>
-    <p>Video Editor | Premiere Pro Specialist</p>
+    <h1>My Professional Video Portfolio</h1>
+    <p>Click thumbnails to watch videos on Google Drive</p>
   </header>
 
-  <section class="projects">
-    <div class="card">
-      <img class="thumbnail" src="https://i.imgur.com/E7QqU5r.jpg" alt="Event Video Thumbnail">
-      <div class="card-body">
-        <div class="card-title">Event Highlight Trailer</div>
-        <a class="btn" href="https://drive.google.com/file/d/1ACM9obkRZQo_csyyiwJ_gGYOu4rXitbL/view" target="_blank">Watch Video</a>
-      </div>
+  <div class="gallery">
+    <div class="video-card">
+      <a href="https://drive.google.com/file/d/1toSX6nQDqO611iuL4F6PLZM-ZkoDAGPe/view?usp=sharing" target="_blank">
+        <img src="762612dc-7eb3-4b0d-9221-e3ce86f97360.png" alt="One Last Time" class="thumbnail">
+      </a>
+      <div class="caption">One Last Time</div>
     </div>
-    <div class="card">
-      <img class="thumbnail" src="https://i.imgur.com/3HKPkFS.jpg" alt="Campus Life Video">
-      <div class="card-body">
-        <div class="card-title">College Fest Promo</div>
-        <a class="btn" href="https://drive.google.com/file/d/1NoPgQzxyFWhY-8UGPV8z0qivmgYv9jc8/view" target="_blank">Watch Video</a>
-      </div>
-    </div>
-    <div class="card">
-      <img class="thumbnail" src="https://i.imgur.com/9KxB4Ud.jpg" alt="YouTube Video">
-      <div class="card-body">
-        <div class="card-title">YouTube Story Project</div>
-        <a class="btn" href="https://youtu.be/FSlEDcGs4ec" target="_blank">Watch on YouTube</a>
-      </div>
-    </div>
-  </section>
 
-  <footer class="contact">
-    Contact: shantanupatil274114@gmail.com | +91 99223 94465
-  </footer>
+    <div class="video-card">
+      <a href="https://drive.google.com/file/d/1AQ8_GUtjc56zpqLrB6e6SP1lG4Iw8Htf/view?usp=drive_link" target="_blank">
+        <img src="fe72a7ae-0078-4bfa-8a27-78d7ddb5ae47.png" alt="Trailer" class="thumbnail">
+      </a>
+      <div class="caption">Trailer</div>
+    </div>
+
+    <div class="video-card">
+      <a href="https://drive.google.com/file/d/1Osf7fGz_ORiFNCtVJUYmUQQzbjgZrHdB/view?usp=drive_link" target="_blank">
+        <img src="5c036da9-41f5-4d15-9978-34f387501cba.png" alt="LAST" class="thumbnail">
+      </a>
+      <div class="caption">LAST</div>
+    </div>
+  </div>
+
+  <a href="https://drive.google.com/drive/folders/1yQv6dngPLZbgtzRZ6Ze0Q3-exMbS4fDz?usp=drive_link" class="btn" target="_blank">View Full Portfolio on Drive</a>
 </body>
 </html>
