--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shantanu Patil | Video Editor</title>
+  <title>Shantanu P Patil | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -13,31 +13,34 @@
       font-family: 'Montserrat', sans-serif;
     }
     body {
-      background-color: #0f0f0f;
-      color: white;
+      background-color: #0d0d0d;
+      color: #fff;
     }
     header {
-      background: #1e1e1e;
-      padding: 20px 40px;
+      background: linear-gradient(to right, #1a1a1a, #262626);
+      padding: 30px;
       text-align: center;
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
+      color: #e0b973;
     }
     header p {
-      font-size: 1rem;
-      color: #aaa;
+      font-size: 1.2rem;
+      color: #ccc;
+      margin-top: 10px;
     }
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 40px;
+      gap: 30px;
+      padding: 50px;
     }
     .video-card {
-      background: #1c1c1c;
+      background: #1a1a1a;
       border-radius: 12px;
       overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
       transition: transform 0.3s ease;
     }
     .video-card:hover {
@@ -46,28 +49,22 @@
     .video-card img {
       width: 100%;
       height: auto;
-      cursor: pointer;
-    }
-    .video-card a {
-      text-decoration: none;
       display: block;
     }
-    footer {
-      background: #141414;
-      color: #ccc;
-      padding: 40px;
-      text-align: center;
-    }
-    footer p {
-      margin: 8px 0;
+    .video-card h3 {
+      padding: 15px;
+      font-size: 1rem;
+      color: #e0b973;
     }
     .youtube-section {
-      text-align: center;
+      background: #141414;
       padding: 60px 20px;
-      background: linear-gradient(to right, #191919, #121212);
+      text-align: center;
     }
     .youtube-section h2 {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      font-size: 1.8rem;
+      color: #e0b973;
     }
     .youtube-section iframe {
       width: 100%;
@@ -75,46 +72,66 @@
       height: 400px;
       border: none;
     }
+    footer {
+      background: #121212;
+      color: #ccc;
+      text-align: center;
+      padding: 40px;
+    }
+    footer a {
+      color: #e0b973;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>Shantanu Patil</h1>
-    <p>Freelance Video Editor | Crafting Visual Stories Frame by Frame</p>
+    <h1>Shantanu P Patil</h1>
+    <p>Creative Video Editor | Adobe Premiere Pro Specialist | Crafting Emotion Through Every Cut</p>
   </header>
 
   <section class="gallery">
     <div class="video-card">
-      <a href="https://drive.google.com/file/d/1TfJH8IdDqCK5kJjkmWIoGxu0uOcEqHSl/view?usp=drive_link" target="_blank">
-        <img src="https://drive.google.com/uc?export=view&id=1hK5b0H3M7_hPhKHvo2mlQTugNSNqEF6Y" alt="Video 1 Thumbnail" />
+      <a href="https://drive.google.com/file/d/1toSX6nQDqO611iuL4F6PLZM-ZkoDAGPe/view?usp=drive_link" target="_blank">
+        <img src="https://drive.google.com/uc?export=view&id=1nxYOZ5LI6Y2IAumclamLwm4ErIJ-higG" alt="One last time Thumbnail" />
+        <h3>One Last Time</h3>
       </a>
     </div>
     <div class="video-card">
-      <a href="https://drive.google.com/file/d/1pHOd4LTrFt35rXeA4WUrkG1yqysrLXYl/view?usp=sharing" target="_blank">
-        <img src="https://drive.google.com/uc?export=view&id=1UgfRjQsb39RO86jJ03n9qovqR3UedqZP" alt="Video 2 Thumbnail" />
+      <a href="https://drive.google.com/file/d/1AQ8_GUtjc56zpqLrB6e6SP1lG4Iw8Htf/view?usp=drive_link" target="_blank">
+        <img src="https://drive.google.com/uc?export=view&id=176j0q_uV_vUDg6jxRFaCE9WFja9DNLH3" alt="Trailer Thumbnail" />
+        <h3>Trailer</h3>
       </a>
     </div>
     <div class="video-card">
-      <a href="https://drive.google.com/file/d/1fP7qNFp-dOSq8JcPMzz3WxDZYAfJ3Iio/view?usp=sharing" target="_blank">
-        <img src="https://drive.google.com/uc?export=view&id=1XrMLP1zJRYcEKpEIo36W10NXYkM_TjOf" alt="Video 3 Thumbnail" />
+      <a href="https://drive.google.com/file/d/1Osf7fGz_ORiFNCtVJUYmUQQzbjgZrHdB/view?usp=sharing" target="_blank">
+        <img src="https://drive.google.com/uc?export=view&id=1Y_zKKhOLhjwB2-2VPvRUXDMYnbkFgsNp" alt="Those Last Days Thumbnail" />
+        <h3>Those Last Days</h3>
       </a>
     </div>
     <div class="video-card">
-      <a href="https://drive.google.com/file/d/1gL9c2fw1xZEvWnhdzcfHgcru8voGnIyk/view?usp=sharing" target="_blank">
-        <img src="https://drive.google.com/uc?export=view&id=1_OEOQH9X0ap6bmmdC2umTMLR-0OP2gkR" alt="Video 4 Thumbnail" />
+      <a href="https://drive.google.com/file/d/1VXcn6KDXUZ9mhr27ztx3wd9xLPLVr4lN/view?usp=drive_link" target="_blank">
+        <img src="https://drive.google.com/uc?export=view&id=1MQqU96RP4mrUSKpAlDP2aIwMfSxM6OXy" alt="Parliament Trailer Thumbnail" />
+        <h3>Parliament Trailer</h3>
+      </a>
+    </div>
+    <div class="video-card">
+      <a href="https://drive.google.com/file/d/19XYGwTxF94u_1-6O8nhdkYM7tOnuA1kK/view?usp=drive_link" target="_blank">
+        <img src="https://drive.google.com/uc?export=view&id=1uW6Kv0PlOTx73Te3kOzKXdbgC6LH_abg" alt="Kokan Diaries Thumbnail" />
+        <h3>Kokan Diaries</h3>
       </a>
     </div>
   </section>
 
   <section class="youtube-section">
     <h2>Watch My YouTube Work</h2>
-    <iframe src="https://www.youtube.com/embed/QUf8fPRi5OI" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" allowfullscreen></iframe>
   </section>
 
   <footer>
     <p><strong>Email:</strong> <a href="mailto:shantanupatil274114@gmail.com">shantanupatil274114@gmail.com</a></p>
     <p><strong>Phone:</strong> +91 99223 94465</p>
-    <p>&copy; 2025 Shantanu Patil | All Rights Reserved</p>
+    <p>&copy; 2025 Shantanu P Patil | All Rights Reserved</p>
   </footer>
 </body>
 </html>
