--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     body {
       background-color: #111;
       color: #f5d76e;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
       text-align: center;
     }
     header {
-      padding: 2rem 1rem 0.5rem 1rem;
+      padding: 2rem 1rem 0.5rem;
     }
     h1 {
       font-size: 2.8rem;
@@ -72,32 +72,32 @@
 
   <section class="portfolio">
     <div class="project">
-      <a href="https://drive.google.com/file/d/1nxYOZ5LI6Y2IAumclamLwm4ErIJ-higG/view">
-        <img src="https://drive.google.com/uc?export=view&id=1nxYOZ5LI6Y2IAumclamLwm4ErIJ-higG" alt="One last time Thumbnail" />
+      <a href="https://drive.google.com/file/d/1toSX6nQDqO611iuL4F6PLZM-ZkoDAGPe/view">
+        <img src="https://lh3.googleusercontent.com/d/1nxYOZ5LI6Y2IAumclamLwm4ErIJ-higG=w1000" alt="One last time Thumbnail" />
         One Last Time
       </a>
     </div>
     <div class="project">
-      <a href="https://drive.google.com/file/d/176j0q_uV_vUDg6jxRFaCE9WFja9DNLH3/view">
-        <img src="https://drive.google.com/uc?export=view&id=176j0q_uV_vUDg6jxRFaCE9WFja9DNLH3" alt="Trailer Thumbnail" />
+      <a href="https://drive.google.com/file/d/1AQ8_GUtjc56zpqLrB6e6SP1lG4Iw8Htf/view">
+        <img src="https://lh3.googleusercontent.com/d/176j0q_uV_vUDg6jxRFaCE9WFja9DNLH3=w1000" alt="Trailer Thumbnail" />
         Trailer
       </a>
     </div>
     <div class="project">
-      <a href="https://drive.google.com/file/d/1Y_zKKhOLhjwB2-2VPvRUXDMYnbkFgsNp/view">
-        <img src="https://drive.google.com/uc?export=view&id=1Y_zKKhOLhjwB2-2VPvRUXDMYnbkFgsNp" alt="Those Last Days Thumbnail" />
+      <a href="https://drive.google.com/file/d/1Osf7fGz_ORiFNCtVJUYmUQQzbjgZrHdB/view">
+        <img src="https://lh3.googleusercontent.com/d/1Y_zKKhOLhjwB2-2VPvRUXDMYnbkFgsNp=w1000" alt="Those Last Days Thumbnail" />
         Those Last Days
       </a>
     </div>
     <div class="project">
-      <a href="https://drive.google.com/file/d/1MQqU96RP4mrUSKpAlDP2aIwMfSxM6OXy/view">
-        <img src="https://drive.google.com/uc?export=view&id=1MQqU96RP4mrUSKpAlDP2aIwMfSxM6OXy" alt="Parliament Trailer Thumbnail" />
+      <a href="https://drive.google.com/file/d/1VXcn6KDXUZ9mhr27ztx3wd9xLPLVr4lN/view">
+        <img src="https://lh3.googleusercontent.com/d/1MQqU96RP4mrUSKpAlDP2aIwMfSxM6OXy=w1000" alt="Parliament Trailer Thumbnail" />
         Parliament Trailer
       </a>
     </div>
     <div class="project">
-      <a href="https://drive.google.com/file/d/1uW6Kv0PlOTx73Te3kOzKXdbgC6LH_abg/view">
-        <img src="https://drive.google.com/uc?export=view&id=1uW6Kv0PlOTx73Te3kOzKXdbgC6LH_abg" alt="Kokan Diaries Thumbnail" />
+      <a href="https://drive.google.com/file/d/19XYGwTxF94u_1-6O8nhdkYM7tOnuA1kK/view">
+        <img src="https://lh3.googleusercontent.com/d/1uW6Kv0PlOTx73Te3kOzKXdbgC6LH_abg=w1000" alt="Kokan Diaries Thumbnail" />
         Kokan Diaries
       </a>
     </div>
