--- a/index.html
+++ b/index.html
@@ -1,117 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shantanu P Patil - Video Editor Portfolio</title>
-  <style>
-    body {
-      background-color: #111;
-      color: #f5d76e;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      padding: 2rem 1rem 0.5rem;
-    }
-    h1 {
-      font-size: 2.8rem;
-      margin: 0;
-      color: #f5d76e;
-    }
-    p {
-      font-size: 1.2rem;
-      color: #ccc;
-    }
-    .portfolio {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 2rem 1rem;
-    }
-    .project {
-      background-color: #1a1a1a;
-      border-radius: 10px;
-      padding: 1rem;
-      width: 200px;
-      box-shadow: 0 4px 10px rgba(255, 215, 0, 0.1);
-    }
-    .project img {
-      width: 100%;
-      border-radius: 10px;
-      margin-bottom: 0.5rem;
-    }
-    .project a {
-      text-decoration: none;
-      color: #f5d76e;
-      font-weight: bold;
-    }
-    .youtube {
-      margin-top: 3rem;
-    }
-    iframe {
-      width: 80%;
-      height: 400px;
-      border: none;
-    }
-    footer {
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Shantanu P Patil - Video Editor Portfolio</title>
+<style>
+  body {
+    background-color: #111;
+    color: #f5d76e;
+    font-family: 'Segoe UI', sans-serif;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  header {
+    padding: 2rem 1rem 0.5rem;
+  }
+  h1 {
+    font-size: 2.8rem;
+    margin: 0;
+    color: #f5d76e;
+  }
+  p {
+    font-size: 1.2rem;
+    color: #ccc;
+  }
+  
+  /* About Me Section */
+  .about {
+    background: #1a1a1a;
+    padding: 2rem;
+    margin: 1rem auto;
+    max-width: 900px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(245, 215, 110, 0.2);
+  }
+  .about h2 {
+    color: #f5d76e;
+    margin-bottom: 1rem;
+  }
+  .about p {
+    color: #ddd;
+    font-size: 1rem;
+  }
+  
+  /* Portfolio Section */
+  .portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 2rem 1rem;
+  }
+  .project {
+    background-color: #1a1a1a;
+    border-radius: 10px;
+    padding: 1rem;
+    width: 200px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  .project:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 20px rgba(245, 215, 110, 0.4);
+  }
+  .project img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 0.5rem;
+  }
+  .project a {
+    text-decoration: none;
+    color: #f5d76e;
+    font-weight: bold;
+  }
+  
+  /* YouTube Section */
+  .youtube {
+    margin: 3rem auto;
+    max-width: 720px;
+  }
+  .youtube h2 {
+    margin-bottom: 1rem;
+  }
+  .yt-thumbnail {
+    position: relative;
+    cursor: pointer;
+  }
+  .yt-thumbnail img {
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(245, 215, 110, 0.2);
+  }
+  .yt-thumbnail::after {
+    content: "▶";
+    font-size: 3rem;
+    color: gold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.85;
+  }
+  .yt-video {
+    display: none;
+  }
+  iframe {
+    width: 100%;
+    height: 405px;
+    border-radius: 10px;
+  }
+  
+  footer {
+    margin-top: 2rem;
+    font-size: 0.9rem;
+    color: #aaa;
+    padding-bottom: 1rem;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <h1>Shantanu P Patil</h1>
-    <p>Creative Video Editor | Adobe Premiere Pro Specialist | Crafting Emotion Through Every Cut</p>
-  </header>
 
-  <section class="portfolio">
-    <div class="project">
-      <a href="https://drive.google.com/file/d/1toSX6nQDqO611iuL4F6PLZM-ZkoDAGPe/view">
-        <img src="https://lh3.googleusercontent.com/d/1nxYOZ5LI6Y2IAumclamLwm4ErIJ-higG=w1000" alt="One last time Thumbnail" />
-        One Last Time
-      </a>
-    </div>
-    <div class="project">
-      <a href="https://drive.google.com/file/d/1AQ8_GUtjc56zpqLrB6e6SP1lG4Iw8Htf/view">
-        <img src="https://lh3.googleusercontent.com/d/176j0q_uV_vUDg6jxRFaCE9WFja9DNLH3=w1000" alt="Trailer Thumbnail" />
-        Trailer
-      </a>
-    </div>
-    <div class="project">
-      <a href="https://drive.google.com/file/d/1Osf7fGz_ORiFNCtVJUYmUQQzbjgZrHdB/view">
-        <img src="https://lh3.googleusercontent.com/d/1Y_zKKhOLhjwB2-2VPvRUXDMYnbkFgsNp=w1000" alt="Those Last Days Thumbnail" />
-        Those Last Days
-      </a>
-    </div>
-    <div class="project">
-      <a href="https://drive.google.com/file/d/1VXcn6KDXUZ9mhr27ztx3wd9xLPLVr4lN/view">
-        <img src="https://lh3.googleusercontent.com/d/1MQqU96RP4mrUSKpAlDP2aIwMfSxM6OXy=w1000" alt="Parliament Trailer Thumbnail" />
-        Parliament Trailer
-      </a>
-    </div>
-    <div class="project">
-      <a href="https://drive.google.com/file/d/19XYGwTxF94u_1-6O8nhdkYM7tOnuA1kK/view">
-        <img src="https://lh3.googleusercontent.com/d/1uW6Kv0PlOTx73Te3kOzKXdbgC6LH_abg=w1000" alt="Kokan Diaries Thumbnail" />
-        Kokan Diaries
-      </a>
-    </div>
-  </section>
+<header>
+  <h1>Shantanu P Patil</h1>
+  <p>Creative Video Editor | Adobe Premiere Pro Specialist | Crafting Emotion Through Every Cut</p>
+</header>
 
-  <section class="youtube">
-    <h2>Watch My YouTube Work</h2>
-    <iframe src="https://www.youtube.com/embed/FSlEDcGs4ec" allowfullscreen></iframe>
-  </section>
+<section class="about">
+  <h2>About Me</h2>
+  <p>I’m a passionate freelance video editor specializing in Adobe Premiere Pro. My work focuses on crafting visually captivating stories with precision and creativity. Every cut, transition, and frame is carefully tailored to evoke emotion and keep the audience engaged.</p>
+</section>
 
-  <footer>
-    <p><strong>Email:</strong> shantanupatil274114@gmail.com</p>
-    <p><strong>Phone:</strong> +91 99223 94465</p>
-    <p>&copy; 2025 Shantanu Patil. All Rights Reserved.</p>
-  </footer>
+<section class="portfolio">
+  <div class="project">
+    <a href="https://drive.google.com/file/d/1toSX6nQDqO611iuL4F6PLZM-ZkoDAGPe/view">
+      <img src="https://lh3.googleusercontent.com/d/1nxYOZ5LI6Y2IAumclamLwm4ErIJ-higG=w1000" alt="One last time Thumbnail" />
+      One Last Time
+    </a>
+  </div>
+  <div class="project">
+    <a href="https://drive.google.com/file/d/1AQ8_GUtjc56zpqLrB6e6SP1lG4Iw8Htf/view">
+      <img src="https://lh3.googleusercontent.com/d/176j0q_uV_vUDg6jxRFaCE9WFja9DNLH3=w1000" alt="Trailer Thumbnail" />
+      Trailer
+    </a>
+  </div>
+  <div class="project">
+    <a href="https://drive.google.com/file/d/1Osf7fGz_ORiFNCtVJUYmUQQzbjgZrHdB/view">
+      <img src="https://lh3.googleusercontent.com/d/1Y_zKKhOLhjwB2-2VPvRUXDMYnbkFgsNp=w1000" alt="Those Last Days Thumbnail" />
+      Those Last Days
+    </a>
+  </div>
+  <div class="project">
+    <a href="https://drive.google.com/file/d/1VXcn6KDXUZ9mhr27ztx3wd9xLPLVr4lN/view">
+      <img src="https://lh3.googleusercontent.com/d/1MQqU96RP4mrUSKpAlDP2aIwMfSxM6OXy=w1000" alt="Parliament Trailer Thumbnail" />
+      Parliament Trailer
+    </a>
+  </div>
+  <div class="project">
+    <a href="https://drive.google.com/file/d/19XYGwTxF94u_1-6O8nhdkYM7tOnuA1kK/view">
+      <img src="https://lh3.googleusercontent.com/d/1uW6Kv0PlOTx73Te3kOzKXdbgC6LH_abg=w1000" alt="Kokan Diaries Thumbnail" />
+      Kokan Diaries
+    </a>
+  </div>
+</section>
+
+<section class="youtube">
+  <h2>Watch My YouTube Work</h2>
+  <div class="yt-thumbnail" onclick="playVideo()">
+    <img src="YOUR_CROPPED_GOLD_PLAY_IMAGE_LINK" alt="YouTube Thumbnail">
+  </div>
+  <div class="yt-video" id="ytVideo">
+    <iframe src="https://www.youtube.com/embed/FSlEDcGs4ec?autoplay=1" allowfullscreen></iframe>
+  </div>
+</section>
+
+<footer>
+  <p><strong>Email:</strong> shantanupatil274114@gmail.com</p>
+  <p><strong>Phone:</strong> +91 99223 94465</p>
+  <p>&copy; 2025 Shantanu Patil. All Rights Reserved.</p>
+</footer>
+
+<script>
+function playVideo() {
+  document.querySelector('.yt-thumbnail').style.display = 'none';
+  document.querySelector('#ytVideo').style.display = 'block';
+}
+</script>
+
 </body>
 </html>
