--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Shantanu P Patil - Video Editor Portfolio</title>
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
   body {
@@ -21,18 +21,18 @@
     padding: 2rem 1rem 1rem;
   }
   h1 {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     margin: 0;
-    font-weight: 700;
+    font-weight: 600;
     color: #f5d76e;
   }
   .tagline {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #ccc;
     margin-top: 0.5rem;
   }
   .about-text {
-    font-size: 1rem;
+    font-size: 0.95rem;
     color: #ddd;
     margin-top: 1rem;
     max-width: 700px;
@@ -46,14 +46,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
     padding: 2rem 1rem;
   }
   .project {
     background-color: #1a1a1a;
     border-radius: 10px;
-    padding: 1rem;
-    width: 200px;
+    padding: 0.5rem;
+    width: 240px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
   .project:hover {
@@ -63,12 +63,13 @@
   .project img {
     width: 100%;
     border-radius: 10px;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
   }
   .project a {
     text-decoration: none;
     color: #f5d76e;
-    font-weight: 600;
+    font-size: 0.85rem;
+    font-weight: 400;
   }
   
   /* YouTube Section */
@@ -78,6 +79,7 @@
   }
   .youtube h2 {
     margin-bottom: 1rem;
+    font-weight: 600;
   }
   .yt-thumbnail {
     position: relative;
@@ -151,7 +153,7 @@
 <section class="youtube">
   <h2>Watch My YouTube Work</h2>
   <div class="yt-thumbnail" onclick="playVideo()">
-    <img src="YOUR_CLEAN_MUN_IMAGE_LINK" alt="YouTube Thumbnail">
+    <img src="https://i.ibb.co/YpRkHnW/mun-thumbnail.jpg" alt="YouTube Thumbnail">
   </div>
   <div class="yt-video" id="ytVideo">
     <iframe src="https://www.youtube.com/embed/FSlEDcGs4ec?autoplay=1" allowfullscreen></iframe>
