--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   /* YouTube Section */
   .youtube {
     margin: 3rem auto;
-    max-width: 720px;
+    max-width: 800px; /* slightly bigger container */
   }
   .youtube h2 {
     margin-bottom: 1rem;
@@ -85,6 +85,7 @@
     position: relative;
     cursor: pointer;
     display: inline-block;
+    width: 90%; /* bigger thumbnail */
   }
   .yt-thumbnail img {
     width: 100%;
@@ -93,7 +94,7 @@
   }
   .yt-thumbnail::after {
     content: "▶";
-    font-size: 2.5rem; /* decent size icon */
+    font-size: 3rem; /* decent bigger icon */
     color: rgba(245, 215, 110, 0.9);
     position: absolute;
     top: 50%;
@@ -105,7 +106,7 @@
   }
   iframe {
     width: 100%;
-    height: 405px;
+    height: 450px;
     border-radius: 10px;
   }
   
@@ -163,7 +164,7 @@
 <section class="youtube">
   <h2>Watch My YouTube Work</h2>
   <div class="yt-thumbnail" onclick="playVideo()">
-    <img src="https://i.ibb.co/pKdQJ0L/mun-clean-thumbnail.jpg" alt="YouTube Thumbnail">
+    <img src="https://drive.google.com/uc?export=view&id=YOUR_MUN_IMAGE_ID" alt="YouTube Thumbnail">
   </div>
   <div class="yt-video" id="ytVideo">
     <iframe src="https://www.youtube.com/embed/FSlEDcGs4ec?autoplay=1" allowfullscreen></iframe>
