--- a/index.html
+++ b/index.html
@@ -76,14 +76,12 @@
   .youtube {
     margin: 3rem auto;
     max-width: 800px;
-    position: relative;
   }
   .youtube h2 {
     margin-bottom: 1rem;
     font-weight: 600;
   }
   .yt-thumbnail {
-    position: relative;
     cursor: pointer;
     display: inline-block;
     width: 90%;
@@ -93,24 +91,6 @@
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(245, 215, 110, 0.2);
     display: block;
-  }
-  .play-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80px;
-    height: 80px;
-    background: rgba(0,0,0,0.5);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .play-icon svg {
-    width: 40px;
-    height: 40px;
-    fill: #f5d76e;
   }
   .yt-video {
     display: none;
@@ -175,12 +155,7 @@
 <section class="youtube">
   <h2>Watch My YouTube Work</h2>
   <div class="yt-thumbnail" onclick="playVideo()">
-    <img src="https://drive.google.com/uc?export=view&id=YOUR_MUN_IMAGE_ID" alt="YouTube Thumbnail">
-    <div class="play-icon">
-      <svg viewBox="0 0 64 64">
-        <polygon points="16,12 52,32 16,52" />
-      </svg>
-    </div>
+    <img src="https://img.youtube.com/vi/FSlEDcGs4ec/maxresdefault.jpg" alt="YouTube Thumbnail">
   </div>
   <div class="yt-video" id="ytVideo">
     <iframe src="https://www.youtube.com/embed/FSlEDcGs4ec?autoplay=1" allowfullscreen></iframe>
