--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   /* YouTube Section */
   .youtube {
     margin: 3rem auto;
-    max-width: 800px;
+    max-width: 900px;
   }
   .youtube h2 {
     margin-bottom: 1rem;
@@ -83,12 +83,16 @@
   }
   .yt-thumbnail {
     cursor: pointer;
+    width: 100%;
+    aspect-ratio: 16/9;
+    position: relative;
     display: inline-block;
-    width: 90%;
   }
   .yt-thumbnail img {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
+    object-fit: cover;
     display: block;
   }
   .yt-video {
@@ -96,7 +100,7 @@
   }
   iframe {
     width: 100%;
-    height: 450px;
+    aspect-ratio: 16/9;
     border-radius: 10px;
   }
   
@@ -154,7 +158,7 @@
 <section class="youtube">
   <h2>Watch My YouTube Work</h2>
   <div class="yt-thumbnail" onclick="playVideo()">
-    <img src="https://img.youtube.com/vi/FSlEDcGs4ec/maxresdefault.jpg" alt="YouTube Thumbnail">
+    <img src="https://img.youtube.com/vi/FSlEDcGs4ec/hqdefault.jpg" alt="YouTube Thumbnail">
   </div>
   <div class="yt-video" id="ytVideo">
     <iframe src="https://www.youtube.com/embed/FSlEDcGs4ec?autoplay=1" allowfullscreen></iframe>
